This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Dereferencing a Null Pointer
Type: crash Stage: resolved
Components: Extension Modules, Library (Lib) Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: benjamin.peterson, pankaj.s01, python-dev, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2015-07-24 07:49 by pankaj.s01, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
Python-2.7.10-json.patch pankaj.s01, 2015-07-24 07:49 Python-2.7.10-json patch
Messages (4)
msg247262 - (view) Author: Pankaj Sharma (pankaj.s01) * Date: 2015-07-24 07:49
Hi,
Reporting bugs for dereferencing a pointer "m"  might be NULL.
the respective patch have been attached ,please check and review it.

thanks!
msg247266 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-07-24 09:54
LGTM.
msg247267 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-07-24 09:58
New changeset a1a1e3fe837a by Serhiy Storchaka in branch '2.7':
Issue #24704: Fixed possible NULL pointer dereferencing in the _json module
https://hg.python.org/cpython/rev/a1a1e3fe837a
msg247268 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-07-24 09:59
Thank you for your contribution Pankaj.
History
Date User Action Args
2022-04-11 14:58:19adminsetgithub: 68892
2015-07-24 09:59:50serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg247268

stage: commit review -> resolved
2015-07-24 09:58:59python-devsetnosy: + python-dev
messages: + msg247267
2015-07-24 09:54:15serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg247266

assignee: serhiy.storchaka
stage: commit review
2015-07-24 07:49:29pankaj.s01create