Issue #24704: Fixed possible NULL pointer dereferencing in the _json module initialization.  Patch by Pankaj Sharma.